Fixed padding so the footer and header are correctly aligned (#21)

--- a/newvelles_web/static/style.css
+++ b/newvelles_web/static/style.css
@@ -3,6 +3,8 @@ body {
     color: Gainsboro;
     font-size: x-large;
     font-family: 'Play', sans-serif;
+    padding-top: 60px;
+    padding-bottom: 40px;
 }
 
 #show-news li.news1
